CSS tweaks for Playlist Show: Add max length to title and description inputs to prevent increasing number of lines in the Header div; align header text to bottom of the div; contain header text within flexbox to prevent overflow onto playlist art; add word-break to playlist description to prevent overflow out of div

--- a/app/assets/stylesheets/08-playlist-show.scss
+++ b/app/assets/stylesheets/08-playlist-show.scss
@@ -15,11 +15,22 @@
     align-items: center;
 }
 
+.playlist-header-text {
+    width: calc(100% - 225px - 30px);
+    height: 225px;
+    place-items: end;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    max-height: 225px;
+}
+
 .playlist-header #title {
     font-family: Trebuchet MS, Gill sans, Helvetica, sans-serif;
     font-weight: bold;
     letter-spacing: -2px;
-    font-size: 60pt;
+    font-size: 55pt;
     padding: 0px;
     margin: 25px 0px 25px 0px;
     max-height: 105pt;
@@ -37,6 +48,7 @@
     color: rgba(255, 255, 255, 0.818);
     margin: 5px 0px 5px 0px;
     max-height: 50px;
+    word-break: break-word;
 }
 
 .playlist-art {
@@ -117,4 +129,5 @@ button.playlist-dropdown-button:hover {
     width: 100%;
     height: calc(100% - 118px - 260px);
     overflow-y: auto;
+    color: white;
 }
